Fixed navbar spacing

--- a/assets/memoryTips.css
+++ b/assets/memoryTips.css
@@ -156,6 +156,29 @@ nav {
     background-color: #379683;
 }
 
+.list {
+    display: inline;
+    margin-left: 27vw;
+    font-size: 2.4vw;
+    padding-right: 0.5vw;
+    text-align: center;
+
+}
+
+.list a {
+    color: #fafafa !important;
+    text-decoration: none;
+    margin-left: 4%;
+    margin-right: 8%;
+    font-family: 'Lusitana', serif;
+    text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
+}
+
+.list a:hover {
+    color: black !important;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+}
+
 
 /* PAO Generator */
 #PAOGenerator {
