--- a/assets/style.css
+++ b/assets/style.css
@@ -152,7 +152,7 @@ nav {
 
 .list {
     display: inline;
-    margin-left: 30vw;
+    margin-left: 27vw;
     font-size: 2.4vw;
     padding-right: 0.5vw;
     text-align: center;
